# RustInMotion

./: Cargo.toml
src/: main.rs  ticker_data.rs  yahoo_finance_service.rs
src/ticker_data/: data_processing.rs  granularity.rs  mod.rs  ticker_data.rs  ticker_summary.rs
src/yahoo_finance_service/: granularity.rs  yahoo_finance_service_message.rs
