[package]
name = "milestone1"
version = "0.1.0"
authors = ["Thomas Wagener <thomas.wagener@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = {"version" = "1.0", features = ["blocking"]}
clap = "2"
chrono = "0.4"

[dev-dependencies]
mockall = "0.9"